[tool.poetry]
name = "lionelmssq"
version = "0.1.0"
description = ""
authors = ["Johannes Koester <johannes.koester@uni-due.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
polars = "^1.9.0"
pulp = "^2.3.0"
pytest = "^8.3.3"
typed-argument-parser = "^1.10.1"
altair = "^5.4.1"
pyyaml = "^6.0.2"
loguru = "^0.7.2"
numpy = "^2.2.3"
platformdirs = "^4.3.8"
clr-loader = "^0.2.7.post0"
ms-deisotope = "^0.0.60"
pythonnet = "^3.0.5"
tqdm = "^4.67.1"
scikit-learn = "^1.7.2"
dbscan1d = "^0.2.3"
matplotlib = "^3.10.6"
cython = "^3.0.3"

[tool.poetry.dev-dependencies]
ruff = "^0.6.9"

[tool.poetry.scripts]
lionelmssq = "lionelmssq.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
