[project]
name = "lionelmssq"
version = "0.1.0"
description = ""
authors = [
    # TODO add all the other authors
    { name = "Laura Kuehle", email = "laura.kuehle@mpi-dortmund.mpg.de" },
    { name = "Juan Antonio Magalang" }, # TODO add Juans mpi email
    { name = "Moshir Harsh", email = "btemoshir@gmail.com" },
    { name = "Johannes Koester", email = "johannes.koester@uni-due.de" }
]
readme = "README.md"
requires-python=">=3.12,<3.14"
# TODO we have to clarify the license situation!!!

dependencies = [
    "polars ^1.9.0",
    "pulp ^2.3.0",
    "pytest ^8.3.3",
    "typed-argument-parser ^1.10.1",
    "altair ^5.4.1",
    "pyyaml ^6.0.2",
    "loguru ^0.7.2",
    "numpy ^2.2.3",
    "platformdirs ^4.3.8",
    "clr-loader ^0.2.7.post0",
    "ms-deisotope ^0.0.60",
    "pythonnet ^3.0.5",
    "tqdm ^4.67.1",
    "scikit-learn ^1.7.2",
    "dbscan1d ^0.2.3",
    "matplotlib ^3.10.6",
    "cython ^3.0.3"
]

[project.scripts]
lionelmssq = "lionelmssq.cli:main"

[project.urls]
Homepage = "https://github.com/koesterlab/lionelmssq"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64"]

[tool.pixi.dependencies]
mono = ">=6.12.0.199,<7"

[tool.pixi.feature.dev.dependencies]
ruff = "*"
pytest = "*"

[tool.pixi.feature.dev.tasks]
format = "ruff format"
lint = "ruff check"
test = "pytest"

[tool.pixi.environments]
dev = {features = ["dev"]}

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

